# pai

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.claude/: launch.json
apps/desktop/: .gitignore  package.json
apps/desktop/frontend/: index.html
apps/desktop/scripts/: prepare-server.mjs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
apps/web/: .env.example  .mcp.json  auth.config.ts  auth.ts  entrypoint.sh  middleware.ts  next.config.mjs  package.json  proxy.ts
apps/web/app/: layout.tsx
apps/web/app/(app)/: layout.tsx
apps/web/app/desktop-auth-bridge/: page.tsx
apps/web/app/sign-in/: page.tsx
apps/web/components/: app-sidebar.tsx  icons.tsx  nav-user.tsx  page-header.tsx  sidebar.tsx  tauri-titlebar.tsx  theme-provider.tsx
apps/web/components/dashboard/: dashboard-client.tsx  hours-chart-widget.tsx  quick-nav.tsx  schedule-widget.tsx  stats-row.tsx  tasks-widget.tsx  todo-widget.tsx
apps/web/components/schedule/: schedule-client.tsx
apps/web/components/settings/: settings-modal.tsx
apps/web/components/tasks/: task-board.tsx  view-switcher.tsx
apps/web/components/todo/: add-todo-dialog.tsx  inline-add-todo.tsx  inline-edit-todo.tsx  (+3 more)
apps/web/hooks/: use-settings.ts
apps/web/lib/: api-utils.ts  desktop-tokens.ts  google.ts  prisma.ts  task-utils.ts  tasks.ts  types.ts
apps/web/prisma/: schema.prisma  seed.ts
apps/web/types/: next-auth.d.ts
(+43 files in other folders)
